# fishing-catch-predictor

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  template.yaml
.github/workflows/: test.yml
src/data_updater/: Dockerfile  __init__.py  external_data.py  facility_config.py  initial_setup.py  main.py  requirements.txt  updater.py
src/lambda_function/: __init__.py  main.py
src/predictor/: Dockerfile  __init__.py  data_loader.py  features.py  handler.py  inference.py  lambda_function.py  predictor.py  requirements.txt
tests/predictor/: conftest.py  test_handler.py
