[project]
name = "fishing-catch-predictor"
version = "0.1.0"
description = "機械学習を使って「明日釣りに行くべきか」を判断するシステム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "astral",
    "boto3",
    "lightgbm",
    "numpy",
    "optuna",
    "pandas",
    "requests",
    "scikit-learn",
]
